Fixed blog article title overflow

--- a/css/blog.scss
+++ b/css/blog.scss
@@ -76,9 +76,13 @@
                 grid-area: title;
                 font-size: calc(2 * var(--fluid-em));
                 font-weight: bold;
-                padding: 0 20px;
-                display: flex;
-                align-items: flex-end;
+                padding: 15px 20px 0;
+                // display: flex;
+                // align-items: flex-end;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+                max-width: calc(100% - 40px);
             }
 
             .article-date {
